[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/flight_demon/flight_demon.gd" type="Script" id=1]
[ext_resource path="res://enemies/flight_demon/Demon-sheet.png" type="Texture" id=2]
[ext_resource path="res://enemies/flight_demon/Demon Idle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ubersprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ubersprite/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ubersprite/Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ubersprite/Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ubersprite/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "strike"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath("ubersprite/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ubersprite/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ubersprite/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ubersprite/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.15469 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ubersprite/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.290196, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="CircleShape2D" id=5]
radius = 80.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.493088, 0.654378, 1 )
colors = PoolColorArray( 0, 0.0196078, 0.0392157, 0.764706, 0, 0.0012207, 0.03125, 1, 0, 0, 0.0666667, 0.803922, 0.0390625, 0, 0.00549316, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 4 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -20, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
angular_velocity = 0.000169926
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 1.5
scale_random = 0.8
color_ramp = SubResource( 7 )
hue_variation = 0.3
hue_variation_random = 0.23

[sub_resource type="CircleShape2D" id=9]

[node name="flight_demon" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ubersprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="ubersprite"]
modulate = Color( 0, 0, 0, 0.894118 )
texture = ExtResource( 2 )
vframes = 2
hframes = 4
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idle = SubResource( 2 )
anims/strike = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 4 )

[node name="SenseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenseArea"]
shape = SubResource( 5 )

[node name="deathtimer" type="Timer" parent="."]
wait_time = 0.4

[node name="Particles2D" type="Particles2D" parent="."]
process_material = SubResource( 8 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 9 )
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="SenseArea" to="." method="_on_SenseArea_body_entered"]
[connection signal="body_exited" from="SenseArea" to="." method="_on_SenseArea_body_exited"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
